[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Particles/Particle_Clone_Summon.gd" type="Script" id=1]

[node name="Particle_Clone_Summon" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )

[node name="Sprite2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )

[node name="Sprite3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )

[node name="Sprite4" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
